# mdn-typo-proofreading

./: .gitignore  .gitmodules  Makefile  aqua.yaml  justfile  pyproject.toml
.github/scripts/: issue_to_pr.py
.github/workflows/: issue-draft-to-doc-pr.yml
mdn_typer/: import_japanese_typos.py
scripts/: create_github_issues.py  import_japanese_typos.py
terraform/: labels.tf  main.tf
tests/: README.md  __init__.py  test_issue_to_pr.py
